[package]
name = "scheme"
version = "0.1.0"
edition = "2021"
authors = ["Overmind JIANG <p90eri@gmail.com>"]

[[bin]]
name = "scheme"
path = "src/driver.rs"

[lib]
name = "scheme"
path = "src/lib.rs"

[dependencies]
byteorder = "*"
bit-vec = "*"
env_logger = "*"
log = "*"
fnv = "*"
dynasm = "1.2.3"
dynasmrt = "1.2.3"

# Removed custom assembler - using dynasm-rs directly
# [dependencies.assembler]
# path = "../assembler"
